--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,8 @@
     "storage"
   ],
   "content_scripts": [{
-    "matches": ["https://github.com/*"],
+    "matches": ["*://github.com/*"],
     "js": ["onLoad.js"]
   }],
-  "web_accessible_resources": ["scriptInPage.js", "jquery.js", "pageStyle.css", "urls.json"]
+  "web_accessible_resources": ["scriptInPage.js", "jquery.js", "pageStyle.css"]
 }
